reduce replicas and workers for resource limiting
The metrics server isn't working on the OSL hosts, and things kept
getting killed by the OOM killer, so just to keep things running, I'm
reducing the number of replicas for now.

I want to get the telemetry back up, but don't want an unstable
system...

--- a/kube/legacy-metabase.pods.yml
+++ b/kube/legacy-metabase.pods.yml
@@ -49,7 +49,7 @@ spec:
   selector:
     matchLabels:
       app: legacy-metabase
-  replicas: 3
+  replicas: 2
   template:
     metadata:
       annotations:
@@ -84,7 +84,7 @@ spec:
             - cpantesters-legacy-metabase
             - prefork
             - -w
-            - "10"
+            - "2"
             - -G
             - "1500"
             - -H
@@ -168,6 +168,7 @@ metadata:
 spec:
   schedule: "*/5 * * * *"
   concurrencyPolicy: Forbid
+  successfulJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
