--- a/kube/backpan.pods.yml
+++ b/kube/backpan.pods.yml
@@ -24,6 +24,7 @@ metadata:
 spec:
   schedule: "0 */8 * * *"
   concurrencyPolicy: Forbid
+  successfulJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
