--- a/kube/web.pods.yml
+++ b/kube/web.pods.yml
@@ -83,6 +83,10 @@ spec:
               value: "30"
             - name: MOJO_MAX_MESSAGE_SIZE
               value: "33554432" # approx 32M
+            - name: OTEL_SERVICE_NAME
+              value: "web"
+            - name: OTEL_EXPORTER_OTLP_ENDPOINT
+              value: "http://signoz-install-otel-collector.telemetry.svc:4318"
           volumeMounts:
             - mountPath: /etc/app
               name: conf-volume
