--- a/kube/backend.pods.yml
+++ b/kube/backend.pods.yml
@@ -108,3 +108,133 @@ spec:
               cpu: 1
               memory: 250M
       restartPolicy: Always
+
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: backend-fetch-cpan-uploads
+spec:
+  schedule: "*/10 * * * *"
+  concurrencyPolicy: Forbid
+  successfulJobsHistoryLimit: 1
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          volumes:
+            - name: container-volume
+              configMap:
+                name: container
+                items:
+                  - key: db
+                    path: db.yml
+                  - key: log
+                    path: log.yml
+            - name: etc-volume
+              configMap:
+                name: etc
+                items:
+                  - key: beam-minion
+                    path: beam-minion.yml
+            - name: mysql-secret
+              secret:
+                secretName: mysql-secret
+
+          containers:
+            - name: backend
+              image: cpantesters/backend:latest
+              command:
+                - /bin/bash
+                - -c
+              args:
+                - beam run metacpan fetch_uploads --since $(date --date="30 minutes ago" -Iseconds)
+              env:
+                - name: BEAM_MINION
+                  value: file:///etc/minion/beam-minion.yml
+                - name: BEAM_PATH
+                  value: /etc/container:/app/etc/container
+                - name: MOJO_LOG_LEVEL
+                  value: debug
+                - name: OTEL_SERVICE_NAME
+                  value: "backend"
+                - name: OTEL_EXPORTER_OTLP_ENDPOINT
+                  value: "http://signoz-install-otel-collector.telemetry.svc:4318"
+              volumeMounts:
+                - mountPath: /etc/container
+                  name: container-volume
+                - mountPath: /etc/minion
+                  name: etc-volume
+                - mountPath: /etc/secrets
+                  name: mysql-secret
+                  readOnly: true
+              resources:
+                requests:
+                  cpu: 1
+                  memory: 250M
+
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: backend-process-missing-reports
+spec:
+  schedule: "0 * * * *"
+  concurrencyPolicy: Forbid
+  successfulJobsHistoryLimit: 1
+  jobTemplate:
+    spec:
+      template:
+        spec:
+          restartPolicy: OnFailure
+          volumes:
+            - name: container-volume
+              configMap:
+                name: container
+                items:
+                  - key: db
+                    path: db.yml
+                  - key: log
+                    path: log.yml
+            - name: etc-volume
+              configMap:
+                name: etc
+                items:
+                  - key: beam-minion
+                    path: beam-minion.yml
+            - name: mysql-secret
+              secret:
+                secretName: mysql-secret
+
+          containers:
+            - name: backend
+              image: cpantesters/backend:latest
+              command:
+                - /bin/bash
+                - -c
+              args:
+                - beam run report process
+              env:
+                - name: BEAM_MINION
+                  value: file:///etc/minion/beam-minion.yml
+                - name: BEAM_PATH
+                  value: /etc/container:/app/etc/container
+                - name: MOJO_LOG_LEVEL
+                  value: debug
+                - name: OTEL_SERVICE_NAME
+                  value: "backend"
+                - name: OTEL_EXPORTER_OTLP_ENDPOINT
+                  value: "http://signoz-install-otel-collector.telemetry.svc:4318"
+              volumeMounts:
+                - mountPath: /etc/container
+                  name: container-volume
+                - mountPath: /etc/minion
+                  name: etc-volume
+                - mountPath: /etc/secrets
+                  name: mysql-secret
+                  readOnly: true
+              resources:
+                requests:
+                  cpu: 1
+                  memory: 250M
