adjust kube resource requests/limits
Signoz was saying the requests were _way_ off, and I added limits so
things get killed when they're misbehaving (not when they're behaving...)

--- a/kube/backend.pods.yml
+++ b/kube/backend.pods.yml
@@ -172,7 +172,10 @@ spec:
               resources:
                 requests:
                   cpu: 1
-                  memory: 250M
+                  memory: 400M
+                limits:
+                  cpu: 2
+                  memory: 500M
 
 ---
 apiVersion: batch/v1
