--- a/kube/api.pods.yml
+++ b/kube/api.pods.yml
@@ -108,8 +108,11 @@ spec:
               readOnly: true
           resources:
             requests:
-              cpu: 0.5
-              memory: 500M
+              cpu: 0.05
+              memory: 300M
+            limits:
+              cpu: 0.1
+              memory: 350M
       restartPolicy: Always
 ---
 apiVersion: v1
