--- a/kube/legacy-metabase.pods.yml
+++ b/kube/legacy-metabase.pods.yml
@@ -201,7 +201,10 @@ spec:
                 - app->refresh_tail_log
               resources:
                 requests:
-                  cpu: 0.5
+                  cpu: 0.01
+                  memory: 300M
+                limits:
+                  cpu: 0.05
                   memory: 500M
               volumeMounts:
                 - mountPath: /data/tail
