--- a/kube/backend.pods.yml
+++ b/kube/backend.pods.yml
@@ -239,5 +239,8 @@ spec:
                   readOnly: true
               resources:
                 requests:
+                  cpu: 0.5
+                  memory: 450M
+                limits:
                   cpu: 1
-                  memory: 250M
+                  memory: 600M
