--- a/kube-telemetry/signoz.yml
+++ b/kube-telemetry/signoz.yml
@@ -45,3 +45,33 @@ spec:
         enabled: true
       loggingExporter:
         enabled: false
+    otelDeployment:
+      additionalEnvs:
+        MYSQL_USERNAME:
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: username
+        MYSQL_PASSWORD:
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: password
+      config:
+        receivers:
+          mysql:
+            endpoint: db-primary-1.cpantesters.org:3306
+            username: ${env:MYSQL_USERNAME}
+            password: ${env:MYSQL_PASSWORD}
+            collection_interval: 10s
+            initial_delay: 1s
+            statement_events:
+              digest_text_limit: 120
+              time_limit: 24h
+              limit: 250
+        service:
+          pipelines:
+            metrics/internal:
+              receivers: [mysql]
+              processors: [batch]
+              exporters: []
