--- a/kube-system/traefik-config.yaml
+++ b/kube-system/traefik-config.yaml
@@ -5,6 +5,131 @@ metadata:
   namespace: kube-system
 spec:
   valuesContent: |-
+    image:
+      repository: docker.io/library/traefik
+      tag: 3.6.5
+
+    ports:
+      web:
+        transport:
+          respondingTimeouts:
+            readTimeout: 600s
+            writeTimeout: 600s
+            idleTimeout: 600s
+          lifeCycle:
+            requestAcceptGraceTimeout: 60s
+            graceTimeOut: 60s
+        forwardedHeaders:
+          trustedIPs:
+            - "10.0.0.0/8"
+            # List of Fastly IPs from https://api.fastly.com/public-ip-list
+            - "23.235.32.0/20"
+            - "43.249.72.0/22"
+            - "103.244.50.0/24"
+            - "103.245.222.0/23"
+            - "103.245.224.0/24"
+            - "104.156.80.0/20"
+            - "140.248.64.0/18"
+            - "140.248.128.0/17"
+            - "146.75.0.0/17"
+            - "151.101.0.0/16"
+            - "157.52.64.0/18"
+            - "167.82.0.0/17"
+            - "167.82.128.0/20"
+            - "167.82.160.0/20"
+            - "167.82.224.0/20"
+            - "172.111.64.0/18"
+            - "185.31.16.0/22"
+            - "199.27.72.0/21"
+            - "199.232.0.0/16"
+            - "2a04:4e40::/32"
+            - "2a04:4e42::/32"
+        proxyProtocol:
+          trustedIPs:
+            - "10.0.0.0/8"
+            # List of Fastly IPs from https://api.fastly.com/public-ip-list
+            - "23.235.32.0/20"
+            - "43.249.72.0/22"
+            - "103.244.50.0/24"
+            - "103.245.222.0/23"
+            - "103.245.224.0/24"
+            - "104.156.80.0/20"
+            - "140.248.64.0/18"
+            - "140.248.128.0/17"
+            - "146.75.0.0/17"
+            - "151.101.0.0/16"
+            - "157.52.64.0/18"
+            - "167.82.0.0/17"
+            - "167.82.128.0/20"
+            - "167.82.160.0/20"
+            - "167.82.224.0/20"
+            - "172.111.64.0/18"
+            - "185.31.16.0/22"
+            - "199.27.72.0/21"
+            - "199.232.0.0/16"
+            - "2a04:4e40::/32"
+            - "2a04:4e42::/32"
+
+      websecure:
+        transport:
+          respondingTimeouts:
+            readTimeout: 600s
+            writeTimeout: 600s
+            idleTimeout: 600s
+          lifeCycle:
+            requestAcceptGraceTimeout: 60s
+            graceTimeOut: 60s
+        forwardedHeaders:
+          trustedIPs:
+            - "10.0.0.0/8"
+            # List of Fastly IPs from https://api.fastly.com/public-ip-list
+            - "23.235.32.0/20"
+            - "43.249.72.0/22"
+            - "103.244.50.0/24"
+            - "103.245.222.0/23"
+            - "103.245.224.0/24"
+            - "104.156.80.0/20"
+            - "140.248.64.0/18"
+            - "140.248.128.0/17"
+            - "146.75.0.0/17"
+            - "151.101.0.0/16"
+            - "157.52.64.0/18"
+            - "167.82.0.0/17"
+            - "167.82.128.0/20"
+            - "167.82.160.0/20"
+            - "167.82.224.0/20"
+            - "172.111.64.0/18"
+            - "185.31.16.0/22"
+            - "199.27.72.0/21"
+            - "199.232.0.0/16"
+            - "2a04:4e40::/32"
+            - "2a04:4e42::/32"
+        proxyProtocol:
+          trustedIPs:
+            - "10.0.0.0/8"
+            # List of Fastly IPs from https://api.fastly.com/public-ip-list
+            - "23.235.32.0/20"
+            - "43.249.72.0/22"
+            - "103.244.50.0/24"
+            - "103.245.222.0/23"
+            - "103.245.224.0/24"
+            - "104.156.80.0/20"
+            - "140.248.64.0/18"
+            - "140.248.128.0/17"
+            - "146.75.0.0/17"
+            - "151.101.0.0/16"
+            - "157.52.64.0/18"
+            - "167.82.0.0/17"
+            - "167.82.128.0/20"
+            - "167.82.160.0/20"
+            - "167.82.224.0/20"
+            - "172.111.64.0/18"
+            - "185.31.16.0/22"
+            - "199.27.72.0/21"
+            - "199.232.0.0/16"
+            - "2a04:4e40::/32"
+            - "2a04:4e42::/32"
+
     experimental:
       otlpLogs: true
 
@@ -31,16 +156,14 @@ spec:
           endpoint: "http://signoz-install-otel-collector.telemetry.svc:4318/v1/metrics"
         pushInterval: "10s"
 
-    # Enable OpenTelemetry logs
-    log:
-      otlp:
-        http:
-          enabled: true
-          endpoint: "http://signoz-install-otel-collector.telemetry.svc:4318/v1/logs"
-
-    # Enable OpenTelemetry access logs
-    accesslog:
-      otlp:
-        http:
-          enabled: true
-          endpoint: http://signoz-install-otel-collector.telemetry.svc:4318/v1/logs
+    # Enable OpenTelemetry access logs is not available in the Helm chart version used by
+    # k3s currently (37.1.0), so we enable regular access logs instead and let them get 
+    # shipped to Signoz
+    logs:
+      access:
+        enabled: true
+        format: json
+        fields:
+          headers:
+            names:
+              User-Agent: keep
