mark tail log cronjob as failed after 3 minutes
If a node disappears, the job may never complete. This ensures that the
job will be marked as failed and the cronjob will try again.

--- a/kube/legacy-metabase.pods.yml
+++ b/kube/legacy-metabase.pods.yml
@@ -155,6 +155,8 @@ spec:
       template:
         spec:
           restartPolicy: OnFailure
+          # Mark as failed after 3 minutes so the next run can try again
+          activeDeadlineSeconds: 180
           volumes:
             - name: conf-volume
               configMap:
