update prod deployment settings
I just read that the default MOJO_MODE of 'development' _also_
automatically adds no-cache headers to every response for convenience.
So, really, I should stop being stupid and lazy and use the correct
MOJO_MODE for production...

This also tunes the 'web' nodes to try to prevent OOM kills by killing
workers after a smaller number of requests. It doesn't seem to have
worked quite as I had hoped, but there's no real drawback to leaving it
like this for now...

--- a/kube/api.pods.yml
+++ b/kube/api.pods.yml
@@ -57,6 +57,8 @@ spec:
               value: debug
             - name: MOJO_HOME
               value: /app
+            - name: MOJO_MODE
+              value: production
             - name: MOJO_CONFIG
               value: /etc/app/api.conf
             - name: MOJO_LOG_SHORT
