--- a/kube/backend.pods.yml
+++ b/kube/backend.pods.yml
@@ -70,7 +70,7 @@ spec:
               readOnly: true
           resources:
             requests:
-              cpu: 0.4
+              cpu: 0.2
               memory: 500M
             limits:
               cpu: 1
@@ -117,7 +117,7 @@ spec:
                 - /bin/bash
                 - -c
               args:
-                - beam run metacpan fetch_uploads --since $(date --date="30 minutes ago" -Iseconds)
+                - beam run metacpan fetch_uploads --since 'now-7d'
               env:
                 - name: BEAM_MINION
                   value: file:///etc/minion/beam-minion.yml
@@ -137,10 +137,10 @@ spec:
                   readOnly: true
               resources:
                 requests:
-                  cpu: 0.01
+                  cpu: 0.1
                   memory: 100M
                 limits:
-                  cpu: 0.1
+                  cpu: 0.2
                   memory: 200M
 
 ---
