have the legacy-metabase also write to the collector

--- a/kube-job/collector-process-metabase.yaml
+++ b/kube-job/collector-process-metabase.yaml
@@ -72,7 +72,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.annotations['batch.kubernetes.io/job-completion-index']
             - name: MOJO_LOG_LEVEL
-              value: info
+              value: debug
             - name: MOJO_HOME
               value: /data
             - name: MOJO_MODE
