add collector url to backend
The backend will now look up reports in the collector first before
falling back to the database. In the end, I should have had everything
use the API instead of the database, but I wanted "efficiency"

--- a/kube-prod/config.yml
+++ b/kube-prod/config.yml
@@ -22,6 +22,7 @@ data:
             password => undef,
           },
         },
+        collector => 'http://collector.default.svc',
     }
 ---
 apiVersion: v1
