tweak resource usage for collector changes
The legacy metabase doesn't need to write to the database for raw
reports anymore, but we're going to do it anyway until I'm absolutely
sure we aren't using it. So now the metabase is writing in the
background in a forked worker, so the CPU/memory usage has increased a
little.

--- a/kube/legacy-metabase.pods.yml
+++ b/kube/legacy-metabase.pods.yml
@@ -11,7 +11,7 @@ spec:
   selector:
     matchLabels:
       app: legacy-metabase
-  replicas: 2
+  replicas: 4
   template:
     metadata:
       annotations:
@@ -90,11 +90,11 @@ spec:
               name: metabase-tail-log
           resources:
             requests:
-              cpu: 0.025
-              memory: 250M
-            limits:
-              cpu: 0.1
+              cpu: 200m
               memory: 500M
+            limits:
+              cpu: 500m
+              memory: 750M
       restartPolicy: Always
 
 ---
