--- a/kube/collector.pods.yml
+++ b/kube/collector.pods.yml
@@ -134,10 +134,10 @@ spec:
               readOnly: true
           resources:
             requests:
-              cpu: 0.01
+              cpu: 500m
               memory: 250M
             limits:
-              cpu: 0.5
+              cpu: 1
               memory: 750M
       restartPolicy: Always
 
